--- a/web/css/nelliel.css
+++ b/web/css/nelliel.css
@@ -289,7 +289,6 @@ a.post-link:visited {
 .op-post {
 	color: #000000;
     min-width: 15em;
-    max-width: 100%;
     height: 100%;
     padding-bottom: 6px;
     padding-left: 20px;
@@ -337,10 +336,8 @@ a.post-link:visited {
     border: 1px solid #77DDFF;
     padding: 5px;
     min-width: 15em;
-    max-width: 95%;
     height: 100%;
     margin: 5px;
-    overflow: hidden;
     display: inline-block;
 }
 
@@ -376,7 +373,7 @@ a.post-link:visited {
 }
 
 .reply-post-contents {
-
+	word-wrap: break-word;
 }
 
 .reply-post-contents-multifile {
