--- a/web/css/nigra.css
+++ b/web/css/nigra.css
@@ -293,7 +293,6 @@ a.post-link:visited {
 .op-post {
     color: #EEEEEE;
     min-width: 15em;
-    max-width: 100%;
     height: 100%;
     padding-bottom: 6px;
     padding-left: 20px;
@@ -341,10 +340,8 @@ a.post-link:visited {
     border: 1px solid #666666;
     padding: 5px;
     min-width: 15em;
-    max-width: 95%;
     height: 100%;
     margin: 5px;
-    overflow: hidden;
     display: inline-block;
 }
 
@@ -380,7 +377,7 @@ a.post-link:visited {
 }
 
 .reply-post-contents {
-
+	word-wrap: break-word;
 }
 
 .reply-post-contents-multifile {
